--- a/config/locales/models/dog.yml
+++ b/config/locales/models/dog.yml
@@ -13,3 +13,6 @@ pt-BR:
         breed: Raça
         gender: Gênero
         castrated: Castrado?
+        genders:
+          male: Macho
+          female: Fêmea
